fix spacing slightly on fake divider

--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,7 @@ a.rawlink, a.rawlink:link, a.rawlink:visited, a.rawlink:hover, a.rawlink:active 
 }
 
 ul.fake {
-  margin: 7px 0 0 20px;
+  margin: 5px 0 0 20px;
 }
 
 .navitems li {
